--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -1,81 +1,140 @@
-<p id="notice"><%= notice %></p>
+<main class="mt-5">
+  <div class="container">
 
-<h1>Scholarships</h1>
+    <h1 class="text-center">Scholarship Applications</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Full name</th>
-      <th>Date</th>
-      <th>Position</th>
-      <th>Branch</th>
-      <th>Start date</th>
-      <th>Email non toca</th>
-      <th>Mobile</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zip</th>
-      <th>Institution name</th>
-      <th>Institution contact</th>
-      <th>Institution phone</th>
-      <th>Institution address</th>
-      <th>Requested amount</th>
-      <th>Self fund</th>
-      <th>Scholarship description</th>
-      <th>Intent signature</th>
-      <th>Intent signature date</th>
-      <th>Release signature</th>
-      <th>Release signature date</th>
-      <th>Status</th>
-      <th>Final decision</th>
-      <th>Returned</th>
-      <th>Approvals</th>
-      <th>Rejections</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <section class="mt-5">
+      <h2 class="toca-uppercase color-toca-red" id="submitted-heading"><%= pluralize(@undecided.count, "Undecided Application") %></h2>
+      <div id="undecided" class="hidden">
+        <% if @undecided.count >= 1 %>
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead class="black white-text">
+                <tr>
+                  <th scope="col">Application</th>
+                  <th scope="col">Amount</th>
+                  <th scope="col">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @undecided.each do |application| %>
+                  <tr>
+                    <td>
+                      <%= link_to hardship_path(application) do %>
+                        Scholarship <%= fixed_digit_number(application.id) %> (<%= application.date %>)
+                      <% end %>
+                    </td>
+                    <td><%= number_to_currency(application.requested_amount, unit: "$") %></td>
+                    <td>
+                      <%= application.status %>
+                      <br>
+                      <%= pluralize(application.approvals.count, "Approval") %><br>
+                      <%= pluralize(application.rejections.count, "Rejection") %>
+                    </td>
+                  </tr>
+                <% end %> <!-- applications each -->
+              </tbody>
+            </table>
+          </div> <!-- responsive table -->
+        <% end %> <!-- if applications.count >= 1 -->
+      </div> <!-- undecided applications container -->
+    </section> <!-- undecided applications -->
 
-  <tbody>
-    <% @scholarships.each do |scholarship| %>
-      <tr>
-        <td><%= scholarship.full_name %></td>
-        <td><%= scholarship.date %></td>
-        <td><%= scholarship.position %></td>
-        <td><%= scholarship.branch %></td>
-        <td><%= scholarship.start_date %></td>
-        <td><%= scholarship.email_non_toca %></td>
-        <td><%= scholarship.mobile %></td>
-        <td><%= scholarship.address %></td>
-        <td><%= scholarship.city %></td>
-        <td><%= scholarship.state %></td>
-        <td><%= scholarship.zip %></td>
-        <td><%= scholarship.institution_name %></td>
-        <td><%= scholarship.institution_contact %></td>
-        <td><%= scholarship.institution_phone %></td>
-        <td><%= scholarship.institution_address %></td>
-        <td><%= scholarship.requested_amount %></td>
-        <td><%= scholarship.self_fund %></td>
-        <td><%= scholarship.scholarship_description %></td>
-        <td><%= scholarship.intent_signature %></td>
-        <td><%= scholarship.intent_signature_date %></td>
-        <td><%= scholarship.release_signature %></td>
-        <td><%= scholarship.release_signature_date %></td>
-        <td><%= scholarship.status %></td>
-        <td><%= scholarship.final_decision %></td>
-        <td><%= scholarship.returned %></td>
-        <td><%= scholarship.approvals %></td>
-        <td><%= scholarship.rejections %></td>
-        <td><%= scholarship.user %></td>
-        <td><%= link_to 'Show', scholarship %></td>
-        <td><%= link_to 'Edit', edit_scholarship_path(scholarship) %></td>
-        <td><%= link_to 'Destroy', scholarship, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <section class="mt-5">
+      <h2 class="toca-uppercase color-toca-red" id="approved-heading"><%= pluralize(@approved.count, "Approved Application") %></h2>
+      <div id="approved" class="hidden">
+        <% if @approved.count >= 1 %>
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead class="black white-text">
+                <tr>
+                  <th scope="col">Application</th>
+                  <th scope="col">Amount</th>
+                  <th scope="col">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @approved.each do |application| %>
+                  <tr>
+                    <td>
+                      <%= link_to hardship_path(application) do %>
+                        Scholarship <%= fixed_digit_number(application.id) %> (<%= application.date %>)
+                      <% end %>
+                    </td>
+                    <td><%= number_to_currency(application.requested_amount, unit: "$") %></td>
+                    <td>
+                      <%= application.status %>
+                      <br>
+                      <% if application.final_decision %>
+                        <%= application.final_decision %>
+                      <% else %>
+                        Not Yet Decided
+                      <% end %>
+                    </td>
+                  </tr>
+                <% end %> <!-- applications each -->
+              </tbody>
+            </table>
+          </div> <!-- responsive table -->
+        <% end %> <!-- if applications.count >= 1 -->
+      </div> <!-- approved applications container -->
+    </section> <!-- approved applications -->
 
-<br>
+    <section class="my-5">
+      <h2 class="toca-uppercase color-toca-red" id="rejected-heading"><%= pluralize(@rejected.count, "Rejected Application") %></h2>
+      <div id="rejected" class="hidden">
+        <% if @rejected.count >= 1 %>
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead class="black white-text">
+                <tr>
+                  <th scope="col">Application</th>
+                  <th scope="col">Amount</th>
+                  <th scope="col">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @rejected.each do |application| %>
+                  <tr>
+                    <td>
+                      <%= link_to hardship_path(application) do %>
+                        Scholarship <%= fixed_digit_number(application.id) %> (<%= application.date %>)
+                      <% end %>
+                    </td>
+                    <td><%= number_to_currency(application.requested_amount, unit: "$") %></td>
+                    <td>
+                      <%= application.status %>
+                      <br>
+                      <% if application.final_decision %>
+                        <%= application.final_decision %>
+                      <% else %>
+                        Not Yet Decided
+                      <% end %>
+                    </td>
+                  </tr>
+                <% end %> <!-- applications each -->
+              </tbody>
+            </table>
+          </div> <!-- responsive table -->
+        <% end %> <!-- if applications.count >= 1 -->
+      </div> <!-- applications container -->
+    </section> <!-- rejected applications -->
 
-<%= link_to 'New Scholarship', new_scholarship_path %>
+
+  </div> <!-- container -->
+</main>
+
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('#submitted-heading').click(function() {
+      $('#submitted').toggle();
+    });
+    $('#approved-heading').click(function() {
+      $('#approved').toggle();
+    });
+    $('#rejected-heading').click(function() {
+      $('#rejected').toggle();
+    });
+  });
+</script>
